# flask-sql-starter

./: .flaskenv  README.md  pyproject.toml
migrations/versions/: 1d63e4d494ce_posts_table.py
src/app/: main.py
src/app/api/: api.py
src/app/api/routes/: users.py
src/app/api/v1/: __init__.py  api_v1_bp.py
src/app/api/v1/routes/: __init__.py  auth.py  users.py
src/app/core/: config.py
src/app/core/schema/: __init__.py  post.py  user.py
src/app/templates/: base.html  index.html
src/app/templates/default/: head.html
src/app/templates/partials/: header.html
src/app/web/: web_bp.py
src/app/web/auth/: forms.py  routes.py
src/app/web/main/: routes.py
