[project]
name = "flask-sql-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]
